elanis-cdn/elanis-cdn-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elanis-cdn
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: elanis-cdn
  template:
    metadata:
      labels:
        app: elanis-cdn
    spec:
      containers:
      - image: ghcr.io/elanis/elanis-cdn:2026.06.08
        name: elanis-cdn
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 5m
            memory: 15Mi
          limits:
            cpu: 300m
            memory: 500Mi
      imagePullSecrets:
      - name: github
