elanis-cdn/elanis-cdn-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: elanis-cdn-svc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: elanis-cdn
