elanis-cdn/elanis-cdn-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: elanis-cdn-ingressroute

spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`01.cdn.elanis.eu`)
    kind: Rule
    services:
    - name: elanis-cdn-svc
      port: 80
    middlewares:
      - name: security
  tls:
    secretName: elanis-cdn-tls-secret
